--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,10 @@
   justify-content: center;
 }
 
+.closedtile {
+  background: lightgrey;
+}
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
