--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  background-image: url(./png/back.jpg);
+  background-repeat: no-repeat;
+  background-size: 2000px;
+}
+
 .game {
   display: flex;
   justify-content: center;
@@ -6,8 +12,10 @@
 }
 
 .controls {
+  width: 800px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .board {
@@ -18,6 +26,11 @@
   grid-template-columns: repeat(25, 40px)
 }
 
+span {
+  font-size: 24px;
+  font-style: oblique;
+}
+
 .tile {
   box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -25,14 +38,26 @@
   margin: 0;
   width: 40px;
   height: 40px;
-  border: 1px solid blue;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url(./png/tileopen.png);
+  background-size: 40px 40px;
 }
 
 .closedtile {
-  background: lightgrey;
+  background-image: url(./png/tile.png);
+  background-size: 40px 40px;
+}
+
+.flagedtile {
+  background-image: url(./png/flag.png);
+  background-size: 40px 40px;
+}
+
+.bomb {
+  background-image: url(./png/pig.png);
+  background-size: 40px 40px;
 }
 
 .noselect {
