--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@ body {
   background-repeat: no-repeat;
   background-size: 1920px;
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  display: block;
+  overflow: auto;
 }
 
 #root {
@@ -11,32 +16,60 @@ body {
 }
 
 .game {
-  zoom:1.2;
+  zoom: 1.5;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 0;
+  margin: 50px 0 0 0;
   width: 100%
 }
 
 .controls {
   width: 800px;
+  height: 50px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.mode-button{
+  position: absolute;
+  top: 150px;
+  left: 50px;
+  width: 100px;
+  height: 100px;
+  z-index: 10;
+  border: yellow 3px solid;
+}
+
+.flag{
+  background-image: url(./png/flagbutton.png);
+  background-size: 100px 100px;
+}
+
+.open{
+  background-image: url(./png/shovel.png);
+  background-size: 100px 100px;
+}
+
+.over{
+  background-image: url(./png/over.png);
+  background-size: 100px 100px;
 }
 
 .board {
   display: grid;
-  width: 998px;
-  height: 639px;
+  width: 800px;
+  height: 512px;
   border: 1px solid black;
-  grid-template-columns: repeat(25, 40px);
+  grid-template-columns: repeat(25, 32px);
 }
 
 span {
-  font-size: 24px;
+  font-size: 22px;
   font-style: oblique;
 }
 
@@ -45,28 +78,28 @@ span {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
   margin: 0;
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
   display: flex;
   align-items: center;
   justify-content: center;
   background-image: url(./png/tileopen.png);
-  background-size: 40px 40px;
+  background-size: 32px 32px;
 }
 
 .closedtile {
   background-image: url(./png/tile.png);
-  background-size: 40px 40px;
+  background-size: 32px 32px;
 }
 
 .flagedtile {
   background-image: url(./png/flag.png);
-  background-size: 40px 40px;
+  background-size: 32px 32px;
 }
 
 .bomb {
   background-image: url(./png/pig.png);
-  background-size: 40px 40px;
+  background-size: 32px 32px;
 }
 
 .noselect {
@@ -77,4 +110,26 @@ span {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
+}
+
+@media screen and (max-device-width: 920px){
+  .top{
+    top: 0px;
+  }
+  .bottom{
+    top: 300px;
+  }
+  .game{
+    align-items: flex-start;
+    margin: 0;
+  }
+  .mode-button{
+    left: 75%;
+  }
+}
+
+@media screen and (orientation: portrait) {
+  body{
+    background-size: auto;
+  }
 }
