--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@ body {
 }
 
 .game {
-  zoom: 1.5;
+  zoom: 1.3;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 50px 0 0 0;
+  margin: 50px 0 20px 0;
   width: 100%
 }
 
@@ -58,6 +58,13 @@ body {
 .over{
   background-image: url(./png/over.png);
   background-size: 100px 100px;
+}
+
+.win{
+  width: 400px;
+  height: 400px;
+  background-image: url(./png/win.png);
+  background-size: 400px 400px;
 }
 
 .board {
@@ -113,6 +120,11 @@ span {
 }
 
 @media screen and (max-device-width: 920px){
+  .win{
+    top:25%;
+    transform: translateY(-50px);
+    transform: translateX(-175px);
+  }
   .top{
     top: 0px;
   }
@@ -124,7 +136,7 @@ span {
     margin: 0;
   }
   .mode-button{
-    left: 75%;
+    left: 70%;
   }
 }
 
